update-manager (1:0.156.12) UNRELEASED; urgency=low

  * data/gtkbuilder/UpgradePromptDialog.ui:
    - Remove has_separator property from dialog_really_do_not_upgrade
      (deprecated in GTK+ 2.22, removed in 3.0).
  * debian/control:
    - Restore gksu dependency, needed by e.g. check-new-release-gtk
      (LP: #980637).

 -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Apr 2012 23:33:18 +0100

update-manager (1:0.156.11) precise; urgency=low

  * DistUpgrade/DistUpgrade.cfg.lucid:
    - add in a missing backported package (LP: #969182)
  * DistUpgrade/Distupgrade.py:
    - workaround issue regarding removing selections, thanks to sampo555 for
      the patch (LP: #945536)
  * Automatic update of mirrors, demoted packages and of included source
    packages: base-installer

 -- Brian Murray <brian@ubuntu.com>  Thu, 12 Apr 2012 11:02:52 -0700

update-manager (1:0.156.10) precise; urgency=low

  [ Michael Vogt ]
  * UpdateManager/Core/MyCache.py:
    - do not attempt to download changelogs from https locations if
      the uri requires credentials, thanks to Pat McGowan

  [ Colin Watson ]
  * UpdateManager/Core/MyCache.py:
    - Check that pkg.candidate.uri is not None when looking for changelogs
      (LP: #839986).

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Mar 2012 13:44:40 +0200

update-manager (1:0.156.9) precise; urgency=low

  [ Michael Vogt ]
  * DistUpgrade/DistUpgradeController.py:
    - support cdrom-only upgrades properly by using the backported
      libapt-{pkg,inst} and release-upgrader-python-apt from the CD
  * DistUpgrade/DistUpgrade.cfg:
    - update KernelRemoval/Version to match oneirics kernel
  * DistUpgrade/DistUpgrade.cfg.lucid:
    - update KernelRemoval/Version to match lucids kernel
  * data/release-upgrades:
    - set releae upgrades default to "lts"
  * DistUpgrade/DistUpgradeCache.py:
    - when selecting a new default kernel from base-installer, ensure
      to install the matching kernel headers too if previously kernel